force-app/main/default/objects/Planning_Vision__c/Planning_Vision__c.object-meta.xml
<CustomObject>
    <label>Planning Vision</label>
    <nameField>
        <label>Planning Vision Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Planning Visions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>