force-app/main/default/objects/Planning_Vision__c/fields/Classification_Visit_Weights__c.field-meta.xml
<CustomField>
    <fullName>Classification_Visit_Weights__c</fullName>
    <label>Classification Visit Weights</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>