force-app/main/default/objects/Planning_Vision__c/fields/Effective_Month__c.field-meta.xml
<CustomField>
    <fullName>Effective_Month__c</fullName>
    <label>Effective Month</label>
    <required>true</required>
    <type>Date</type>
</CustomField>