force-app/main/default/objects/Planning_Vision__c/fields/Focus_Product_Families__c.field-meta.xml
<CustomField>
    <fullName>Focus_Product_Families__c</fullName>
    <label>Focus Product Families</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>