force-app/main/default/objects/Planning_Vision__c/fields/Focus_Therapy_Areas__c.field-meta.xml
<CustomField>
    <fullName>Focus_Therapy_Areas__c</fullName>
    <label>Focus Therapy Areas</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>