force-app/main/default/objects/Planning_Vision__c/fields/Territory2_Id__c.field-meta.xml
<CustomField>
    <fullName>Territory2_Id__c</fullName>
    <label>Territory</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>