force-app/main/default/objects/Planning_Vision__c/fields/Vision_Summary__c.field-meta.xml
<CustomField>
    <fullName>Vision_Summary__c</fullName>
    <label>Vision Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>